[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scences/DogWalking/Actors/Raindrop.gd" type="Script" id=1]
[ext_resource path="res://Assets/DogWalking/rain.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 40 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 1 )

[node name="Raindrop" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 1 )

[node name="Raindrop" type="Sprite" parent="."]
position = Vector2( 0, -53 )
scale = Vector2( 0.127193, 0.311765 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -40 )
shape = SubResource( 1 )

[node name="HitDetect" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitDetect"]
modulate = Color( 0.152941, 0.117647, 0.694118, 1 )
position = Vector2( 0, -4 )
shape = SubResource( 2 )

[node name="AutoRemove" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="AutoRemove"]
modulate = Color( 0.368627, 0.0431373, 0.0431373, 1 )
position = Vector2( 0, -81 )
shape = SubResource( 3 )
[connection signal="body_entered" from="HitDetect" to="." method="_on_HitDetect_body_entered"]
[connection signal="body_entered" from="AutoRemove" to="." method="_on_AutoRemove_body_entered"]
